# waonc

./: INSTALL  Makefile.am  Makefile.in  README.md  TODO  bootstrap  configure  configure.ac  pack  strap_functions
doc/: notes.txt
doc/dox/: README-kengo  doxygen.cfg  mainpage.dox  waon_inside.dox  waon_introduction.dox  waon_license.dox  waon_tips.dox
gwaonc/: Makefile.am  Makefile.in  gtk-color.c  gtk-color.h  gwaon-about.c  gwaon-about.h  gwaon-menu.c  gwaon-menu.h  gwaon-play.c  gwaon-play.h  gwaon-wav.c  gwaon-wav.h  gwaon.c
libwaonc/: Makefile.am  Makefile.in
libwaonc/dox/: fft_functions.dox  midi_functions.dox  notes_functions.dox
libwaonc/include/: Makefile.am  Makefile.in  VERSION.h  analyse.h  ao-wrapper.h  fft.h  hc.h  macros.h  memory-check.h  midi.h  notes.h  parameters.h  processing.h  pv-complex-curses.h  pv-complex.h  pv-conventional.h  pv-ellis.h  pv-freq.h  pv-loose-lock.h  pv-nofft.h  snd.h
libwaonc/src/: Makefile.am  Makefile.in  analyse.c  ao-wrapper.c  fft.c  hc.c  midi.c  notes.c  parameters.c  processing.c  pv-complex-curses.c  pv-complex.c  pv-conventional.c  pv-ellis.c  pv-freq.c  pv-loose-lock.c  pv-nofft.c  snd.c
m4/: Makefile.am  Makefile.in  fftw.m4  samplerate.m4  sndfile.m4
old-waon-0.10/: Makefile.gwaon
pvc/: Makefile.am  Makefile.in  jack-pv.c  jack-pv.h  pv.c
test-files/: Guitar_Standard_Tuning.mid  README  alsaloop.conf  alsaloop.txt  ca-output-after-fixes.mid
waonc/: Makefile-future.am  Makefile.am  Makefile.in  error.txt  main-bak.c  main.c  output.mid  peak-16.mid  peak-2.mid  peak-32.mid
waonc/dox/: waon_introduction.dox
